Changelog
=========

0.2 (unreleased)
----------------

- Nothing changed yet.


0.1 (2009-06-19)
----------------

* Initial release