@@ -35,3 +35,4 @@ Contributors
 
 * Giorgio Borelli - gborelli
 * Silvio Tomatis - silviot
+* David Breitkreutz - rockdj
