@@ -4,8 +4,14 @@ Changelog
 0.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
-
+* Updated CSV reader and other coordinate references to be consistent
+  with WGS 1984 reference system.  This involves standardising the
+  coordinate order to be [longitude, latitude] rather than [latitude,
+  longitude].
+  [rockdj]
+* Updated unit tests to check for error message on CSV upload as well 
+  as updated coordinates.
+  [rockdj]
 
 0.1 (2009-06-19)
 ----------------
